Bug 1053008 - FlushAndDispatch the ResetDecode call in MDSM::FlushDecoding(). r=kinetik