content/media/MediaDecoderStateMachine.cpp
@@ -2443,23 +2443,23 @@ MediaDecoderStateMachine::FlushDecoding()
                "Should be on state machine or decode thread.");
   mDecoder->GetReentrantMonitor().AssertNotCurrentThreadIn();
 
-  // Put a task in the decode queue to abort any decoding operations.
-  // The reader is not supposed to put any tasks to deliver samples into
-  // the queue after we call this (unless we request another sample from it).
-  RefPtr<nsIRunnable> task;
-  task = NS_NewRunnableMethod(mReader, &MediaDecoderReader::ResetDecode);
-  mDecodeTaskQueue->Dispatch(task);
-
   {
-    // Wait for the thread decoding to abort decoding operations and run
-    // any pending callbacks. This is important, as we don't want any
-    // pending tasks posted to the task queue by the reader to deliver
-    // any samples after we've posted the reader Shutdown() task below,
-    // as the sample-delivery tasks will keep video frames alive until
-    // after we've called Reader::Shutdown(), and shutdown on B2G will
-    // fail as there are outstanding video frames alive.
+    // Put a task in the decode queue to abort any decoding operations.
+    // The reader is not supposed to put any tasks to deliver samples into
+    // the queue after this runs (unless we request another sample from it).
+    RefPtr<nsIRunnable> task;
+    task = NS_NewRunnableMethod(mReader, &MediaDecoderReader::ResetDecode);
+
+    // Wait for the ResetDecode to run and for the decoder to abort
+    // decoding operations and run any pending callbacks. This is
+    // important, as we don't want any pending tasks posted to the task
+    // queue by the reader to deliver any samples after we've posted the
+    // reader Shutdown() task below, as the sample-delivery tasks will
+    // keep video frames alive until after we've called Reader::Shutdown(),
+    // and shutdown on B2G will fail as there are outstanding video frames
+    // alive.
     ReentrantMonitorAutoExit exitMon(mDecoder->GetReentrantMonitor());
-    mDecodeTaskQueue->Flush();
+    mDecodeTaskQueue->FlushAndDispatch(task);
   }
 
   // We must reset playback so that all references to frames queued
